--- a/style.css
+++ b/style.css
@@ -1,18 +1,18 @@
-*{
+* {
   margin: 0;
   padding: 0;
-  font-family: 'poppins', sans-sherif;
+  font-family: "poppins", sans-sherif;
   box-sizing: border-box;
 }
 
-.container{
+.container {
   width: 100%;
   min-height: 100vh;
   background: linear-gradient(135deg, #153677, #4e085f);
   padding: 10px;
 }
 
-.todo-app{
+.todo-app {
   width: 100%;
   max-width: 540px;
   background: #fff;
@@ -21,19 +21,19 @@
   border-radius: 10px;
 }
 
-.todo-app h2{
+.todo-app h2 {
   color: #002765;
   display: flex;
   align-items: center;
   margin-left: 10px;
 }
 
-.todo-app h2 img{
+.todo-app h2 img {
   width: 30px;
   margin-left: 10px;
 }
 
-.row{
+.row {
   display: flex;
   align-items: center;
   justify-content: space-around;
@@ -43,7 +43,7 @@
   margin-bottom: 25px;
 }
 
-input{
+input {
   flex: 1;
   border: none;
   outline: none;
@@ -52,7 +52,7 @@ input{
   font-weight: 14px;
 }
 
-button{
+button {
   border: none;
   outline: none;
   padding: 16px 50px;
@@ -63,33 +63,50 @@ button{
   border-radius: 40px;
 }
 
-ul li{
+ul li {
   list-style: none;
-  font-size: 17px;
-  padding: 12px 7px 12px 50px;
+  font-size: 18px;
+  padding: 12px 8px 12px 50px;
   user-select: none;
   cursor: pointer;
   position: relative;
 }
 
-ul li::before{
-  content: '';
+ul li::before {
+  content: "";
   position: absolute;
-  height: 27px;
-  width: 27px;
+  height: 28px;
+  width: 28px;
   border-radius: 50%;
   background-image: url(images/unchecked.png);
   background-size: cover;
   background-position: center;
   top: 12px;
-  left: 7px;
+  left: 8px;
 }
 
-ul li.checked{
+ul li.checked {
   color: #555;
   text-decoration: line-through;
 }
 
-ul li.checked::before{
+ul li.checked::before {
   background-image: url(images/checked.png);
+}
+
+ul li span {
+  position: absolute;
+  right: 0;
+  top: 5px;
+  width: 40px;
+  height: 40px;
+  font-size: 32px;
+  color: #555;
+  line-height: 40px;
+  text-align: center;
+}
+
+ul li span:hover {
+  background: #edeef0;
+  border-radius: 50%;
 }
