--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
 .container {
   width: 100%;
   min-height: 100vh;
-  background: linear-gradient(135deg, #153677, #4e085f);
+  background: linear-gradient(#e66465, #9198e5);
   padding: 10px;
 }
 
@@ -50,7 +50,8 @@ input {
   background: transparent;
   padding: 10px;
   font-weight: 14px;
-}
+  font-size: larger;
+  }
 
 button {
   border: none;
@@ -58,9 +59,14 @@ button {
   padding: 16px 50px;
   background: #ff5945;
   color: #fff;
-  font-size: 16px;
+  font-size: 17px;
   cursor: pointer;
   border-radius: 40px;
+}
+
+button:hover{
+  background: #e29188;
+  transition: 500ms;
 }
 
 ul li {
@@ -81,7 +87,7 @@ ul li::before {
   background-image: url(images/unchecked.png);
   background-size: cover;
   background-position: center;
-  top: 12px;
+  top: 7px;
   left: 8px;
 }
 
